test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_type_runtimeCode_keywords.sol
contract A {
    function f() public {}
}
contract C {
    function f() pure public {
        abi.decode("", (type(A).runtimeCode));
    }
}
// ----
// TypeError 1039: (110-129): Argument has to be a type name.
